--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body class="flex flex-col items-center justify-center p-2">
 
-    <div class="w-full max-w-4xl p-6 bg-white rounded-xl shadow-lg flex flex-col items-center">
+    <div class="w-full sm:max-w-4xl p-6 bg-white rounded-xl shadow-lg flex flex-col items-center aspect-4-3">
         <!-- Header: Title and Reset Button -->
         <div class="flex justify-between items-start w-full mb-6">
             <h1 class="text-xl sm:text-2xl font-semibold text-left">
