--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- Header: Title and Reset Button -->
         <div class="flex justify-between items-start w-full mb-6">
             <h1 class="text-xs sm:text-2xl font-semibold text-left mr-4">
-                Which of the following shows the correct order of the 5-step process of making an ethical decision?
+                Drag and drop the correct steps of the 5-step process of making an ethical decision.
             </h1>
             <button id="reset-button" class="px-2 py-1 sm:px-6 sm:py-3 bg-blue-500 text-white font-bold rounded-full shadow-md transition-transform transform hover:scale-105 active:scale-95 text-xs shrink-0">
                 Reset
@@ -100,6 +100,12 @@
         <div class="flex flex-col items-center w-full">
             <div id="drop-container-top-row" class="flex flex-row justify-center items-center flex-wrap gap-1 sm:gap-4 w-full"></div>
             <div id="drop-container-bottom-row" class="flex flex-row justify-center items-center flex-wrap gap-1 sm:gap-4 w-full mt-4"></div>
+        </div>
+
+        <!-- Footer -->
+        <div class="mt-auto pt-4 text-[6px] sm:text-xs text-gray-400 text-center">
+            <div>Internal Use</div>
+            <div>Designed by Learning Delivery - CHD</div>
         </div>
     </div>
 
