--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- Header: Title and Reset Button -->
         <div class="flex justify-between items-start w-full mb-6">
             <h1 class="text-xs sm:text-2xl font-semibold text-left mr-4">
-                Drag and drop the correct steps of the 5-step process of making an ethical decision.
+                Drag and drop the correct steps <br>of the 5-step process of making an ethical decision.
             </h1>
             <button id="reset-button" class="px-2 py-1 sm:px-6 sm:py-3 bg-blue-500 text-white font-bold rounded-full shadow-md transition-transform transform hover:scale-105 active:scale-95 text-xs shrink-0">
                 Reset
@@ -355,3 +355,4 @@
     </script>
 </body>
 </html>
+
